--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.5.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.0.1",
+    "recoil": "^0.7.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
