--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-timer-hook": "^3.0.5",
     "react-webcam": "^7.0.1",
     "recoil": "^0.7.6",
     "web-vitals": "^2.1.4"
