--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-timer-hook": "^3.0.5",
+    "react-tsparticles": "^2.7.1",
     "react-webcam": "^7.0.1",
     "recoil": "^0.7.6",
+    "tsparticles-preset-sea-anemone": "^2.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
